welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (esc = true) {
                ^